[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recastx-pygui"
version = "0.1.0"
description = ""
authors = [
    {name = "Jun Zhu", email="zhujun981661@gmail.com"},
]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Topic :: Scientific/Engineering :: Information Analysis',
]
requires-python = ">=3.9"
dependencies = [
    'pyqt6',
    'foamgraph>=0.2.2',
]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-qt",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/zhujun98/recastx-pygui"
